# voice-to-text

./: .env.example  .gitignore  API_KEYS_SETUP.md  ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RELEASE.md  SECURITY.md  SETUP.md  STATUS.md  TRAY_AND_UPDATES.md  WHISPER_INTEGRATION.md  demo.html  index.html  package.json  plan.md  pnpm-lock.yaml  render.yaml  tsconfig.json  verify_data.cjs  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.tauri/: .gitignore  README.md  voice-to-text.key.pub
docs/: RELEASE.md
e2e-tests/: README.md  run-e2e.mjs  wdio.conf.mjs
e2e-tests/helpers/: tauriE2e.mjs
e2e-tests/specs/: burstUpdates.e2e.mjs  lateJoin.e2e.mjs  multiWindowSync.e2e.mjs
iterations/: 0001-state-sync-integration.md
landing/: README.md  error.vue  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  render.yaml
landing/api/: http-client.ts  index.ts  types.ts
landing/composables/: useBrowserTheme.ts  usePageSeo.ts  useReleaseDownloads.ts  useSupportedLanguages.ts
landing/content/: de.json  en.json  es.json  fr.json  ru.json  uk.json
landing/data/: content.ts  downloads.ts  faq.ts  features.ts  i18n.ts  providers.ts  screenshots.ts  sections.ts  testimonials.ts
landing/layouts/: default.vue
landing/locales/: de.json  en.json  es.json  fr.json  ru.json  uk.json
landing/pages/: checkout-success.vue  index.vue  pay.vue  privacy-policy.vue  privacy.vue  refund-policy.vue  terms.vue
landing/plugins/: init-theme-locale.client.ts  paddle.client.ts  vuetify.ts
landing/public/: sitemap.xml
landing/stores/: download.ts  theme.ts
landing/types/: content.ts
landing/utils/: platform.ts
src/: App.vue  env.d.ts  i18n.locales.test.ts  i18n.locales.ts  i18n.ts  main.ts
src-tauri/: .env.test.example  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/benches/: deepgram_benchmarks.rs
src-tauri/capabilities/: app-wide.json  auth-window.json  default.json  demo-window.json  main-window.json  profile-window.json  settings-window.json
src-tauri/examples/: test_deepgram_connection.rs
src-tauri/icons/: icon.icns
src-tauri/src/: demo.rs  lib.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/services/: audio_spectrum.rs  mod.rs  transcription_service.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/models/: audio_chunk.rs  config.rs  mod.rs  transcription.rs
src-tauri/src/domain/ports/: audio_capture.rs  mod.rs  stt_provider.rs
src-tauri/src/infrastructure/: auth_store.rs  auto_paste.rs  config_store.rs  factory.rs  hotkey.rs  mod.rs  updater.rs
src-tauri/src/infrastructure/audio/: mock_capture.rs  mod.rs  system_capture.rs  vad_capture_wrapper.rs  vad_processor.rs
src-tauri/src/infrastructure/models/: mod.rs  whisper_models.rs
src-tauri/src/infrastructure/stt/: assemblyai.rs  backend.rs  backend_messages.rs  deepgram.rs  mod.rs  whisper_local.rs
src-tauri/src/presentation/: commands.rs  events.rs  mod.rs  state.rs  tray.rs
src-tauri/tests/: README.md  TEST_RESULTS.md  assemblyai_test.rs  config_store_test.rs  deepgram_test.rs  integration_test.rs  test_support.rs  transcription_service_test.rs  websocket_advanced_test.rs  websocket_e2e_test.rs
src/assets/: style.css
src/composables/: useAudioVisualizer.ts  useUpdater.ts
src/demo/: DemoApp.vue  demoStore.ts  demoSync.ts  main.ts
src/e2e/: e2eHooks.ts
src/plugins/: vuetify.ts
src/stores/: appConfig.sync.test.ts  appConfig.ts  sttConfig.sync.test.ts  sttConfig.ts  transcription.ts  update.ts  (+1 more)
(+163 files in other folders)
